# git-pet

./: .gitignore  CMakeLists.txt  Makefile  compile_flags.txt
include/: cpptui.hpp
include/core/: Animation.hpp  AnimationPlayer.hpp  Image.hpp  Pet.hpp
include/git/: Branch.hpp  Commit.hpp  GitLibrary.hpp  Repository.hpp
include/screen/ui/screen/: MainMenuScreen.hpp
include/screen/ui/widgets/: BranchesView.hpp  CenteredLayout.hpp  CommitsView.hpp  GitCard.hpp  GitStats.hpp  MainView.hpp  PetView.hpp  RepoInfo.hpp
include/utils/: image.hpp  time.hpp
src/: main.cpp
src/core/: Animation.cpp  AnimationPlayer.cpp  Image.cpp  Pet.cpp
src/git/: Branch.cpp  Branch.hpp  Commit.cpp  Commit.hpp  GitLibrary.hpp  Repository.cpp  Repository.hpp  Status.hpp
src/ui/screens/: MainMenuScreen.cpp
src/ui/widgets/: BranchesView.cpp  CenteredLayout.cpp  CommitsView.cpp  GitCard.cpp  GitStats.cpp  MainView.cpp  PetView.cpp  RepoInfo.cpp
src/utils/: image.cpp  time.cpp
